--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -10,6 +10,7 @@
     "workbench.iconTheme": "ayu",
     "workbench.colorTheme": "Ayu Mirage Bordered",
     "editor.fontSize": 15,
+    "editor.fontFamily": "'FiraCode Nerd Font', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "markdown.preview.fontSize": 16,
     "markdown.preview.fontFamily": "'Nunito',-apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
     
